# release-the-gil-pybind11

./: .gitignore  CMakeLists.txt  conftest.py  fibonacci.pyi  setup.py  tox.ini
speiceio_pybind11/: __init__.pyi
src/: main.cpp
tests/: test_fibonacci.py
